--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -15,7 +15,7 @@
 @import './accordion.scss';
 @import './reviews.scss';
 @import './contact.scss';
-@import './info.scss';
+@import './welcome.scss';
 @import './link.scss';
 @import './progress-bar.scss';
 @import './twoimages.scss';
