--- a/src/styles/basic.css
+++ b/src/styles/basic.css
@@ -198,7 +198,12 @@ input {
   margin-left: 15px;
 }
 .list-item + .list-item {
-  margin-top: 5px;
+  margin-top: 12px;
+}
+@media (max-width: 767px) {
+  .list-item {
+    margin-left: 17px;
+  }
 }
 
 .list-subtitle {
