--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -136,6 +136,10 @@
   .section-col__left {
     width: 25%;
   }
+  .services .section-col__left {
+    width: 100%;
+    margin: 50px 0;
+  }
 }
 
 .section-col__right {
