--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -2,6 +2,7 @@
 @import './mixins.scss';
 @import './variables.scss';
 @import './header.scss';
+@import './bigImage.scss';
 @import './logo.scss';
 @import './menu.scss';
 @import './services.scss';
@@ -19,6 +20,5 @@
 @import './link.scss';
 @import './progress-bar.scss';
 @import './twoimages.scss';
-@import './toTop.scss';
 @import './story.scss';
 @import './preloader.scss';
