--- a/src/styles/twoimages.scss
+++ b/src/styles/twoimages.scss
@@ -24,13 +24,13 @@
 		width: 50%;
 	}
 }
-.twoimages__img-1 {
-	background-image: url(../assets/images/images/image-9.jpg);
-}
+// .twoimages__img-1 {
+// 	background-image: url(../assets/images/images/image-9.jpg);
+// }
 
-.twoimages__img-2 {
-	background-image: url(../assets/images/images/image-11.jpg);
-}
+// .twoimages__img-2 {
+// 	background-image: url(../assets/images/images/image-11.jpg);
+// }
 
 .twoimages {
 	position: relative;
