--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -36,7 +36,8 @@
 	@include md-min {
 		width: 25%;
 
-		.services & {
+		.services &,
+		.services-details & {
 			width: 100%;
 			margin: 50px 0;
 		}
