a little bit css

--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -37,7 +37,8 @@
 		width: 25%;
 
 		.services &,
-		.services-details & {
+		.services-details &,
+		.projects & {
 			width: 100%;
 			margin: 50px 0;
 		}
