--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -1,3 +1,16 @@
+.services {
+	@include content-width;
+	margin: 0 auto;
+}
+
+.service__inner {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 10px;
+}
+
 .service__item--wrapper {
 	cursor: pointer;
 	width: calc(50% - 20px);
@@ -5,9 +18,16 @@
 }
 
 .service__item {
+	position: relative;
+	overflow: hidden;
 	background-repeat: no-repeat;
 	background-size: cover;
 	aspect-ratio: 1/1;
+	transition: transform 0.3s ease;
+}
+
+.service__item-1 {
+	background-image: url(../assets/images/services/service-2.jpg);
 }
 
 .service__item-2 {
@@ -22,12 +42,25 @@
 	background-image: url(../assets/images/services/service-4.jpg);
 }
 
-.service__item-1 {
-	background-image: url(../assets/images/services/service-2.jpg);
+.service__item:hover {
+	transform: scale(1.1);
 }
 
-.service__item {
-	position: relative;
+.service__item::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.4;
+	transition: opacity 0.3s ease;
+	pointer-events: none;
+}
+
+.service__item:hover::before {
+	opacity: 0.6;
 }
 
 .service__title {
@@ -35,22 +68,6 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-}
-
-.services {
-	@include content-width;
-	margin: 0 auto;
-}
-
-.service__inner {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	gap: 10px;
-}
-
-.service__title {
 	font-size: 40px;
 	text-transform: uppercase;
 	z-index: 11;
