--- a/src/styles/link.scss
+++ b/src/styles/link.scss
@@ -8,6 +8,10 @@
 	justify-content: flex-start;
 	align-items: center;
 
+	.about & {
+		display: none;
+	}
+
 	&::after {
 		content: '';
 		position: absolute;
@@ -32,6 +36,10 @@
 	position: relative;
 	font-weight: 500;
 	font-size: 15px;
+
+	.count-up__section & {
+		font-size: 18px;
+	}
 
 	@include md-min {
 		font-size: 22px;
