--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -81,12 +81,27 @@
 }
 
 .service-detail__title {
-	background-color: $color-red;
-	color: $color-white;
-	font-weight: 450;
-	padding: 20px;
+	border-top: 2px solid $color-red;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: 500;
+	padding: 30px;
+	font-size: 22px;
+	letter-spacing: 3px;
 }
 
 .service-detail__list {
-	padding: 50px 0;
+	padding: 30px 0;
+}
+
+.sub-list__columns {
+	display: flex;
+	justify-content: center;
+	gap: 50px;
+	padding-bottom: 30px;
+}
+
+.fade-out {
+	opacity: 0;
+	transition: opacity 0.5s ease-out;
 }
