--- a/src/styles/link.scss
+++ b/src/styles/link.scss
@@ -2,15 +2,11 @@
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
-	margin-top: 40px;
+	margin-top: 30px;
 	text-decoration: none;
 	display: inline-flex;
 	justify-content: flex-start;
 	align-items: center;
-
-	.about & {
-		display: none;
-	}
 
 	&::after {
 		content: '';
@@ -20,33 +16,41 @@
 		width: 100%;
 		height: 1px;
 		background-color: black;
-		transform: scaleX(0); /* Set initial scale to 0 for hidden state */
+		transform: scaleX(0);
 		transform-origin: left;
 		transition: transform 0.3s ease, background-color 0.3s ease;
 	}
 
-	/* This triggers the animation when hovering over .link */
 	&:hover::after {
-		transform: scaleX(1); /* Expands the line to full width */
+		transform: scaleX(1);
 		background-color: $color-main;
+	}
+
+	@include md-min {
+		margin-top: 40px;
 	}
 }
 
 .link-text {
 	position: relative;
 	font-weight: 500;
-	font-size: 15px;
-
-	.count-up__section & {
-		font-size: 18px;
-	}
+	font-size: 13px;
 
 	@include md-min {
 		font-size: 22px;
+
+		.count-up__section & {
+			font-size: 18px;
+		}
 	}
 }
 
 .link-icon {
 	padding: 0 10px;
 	display: inline-flex;
+	font-size: 22px;
+
+	@include md-max {
+		font-size: 13px;
+	}
 }
