--- a/src/styles/countUp.scss
+++ b/src/styles/countUp.scss
@@ -7,10 +7,18 @@
 }
 
 .count-up__number {
-	font-size: 120px;
+	font-size: 80px;
 	font-weight: 700;
+
+	@include md-min {
+		font-size: 120px;
+	}
 }
 
 .count-up__text {
-	font-size: 25px;
+	font-size: 16px;
+
+	@include md-min {
+		font-size: 25px;
+	}
 }
