--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -5,16 +5,24 @@
 
 .service__inner {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	gap: 10px;
+
+	@include md-min {
+		flex-direction: row;
+	}
 }
 
 .service__item--wrapper {
 	cursor: pointer;
-	width: calc(50% - 20px);
+	width: 100%;
 	overflow: hidden;
+
+	@include md-min {
+		width: calc(50% - 20px);
+	}
 }
 
 .service__item {
@@ -68,11 +76,15 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-size: 40px;
+	font-size: 25px;
 	text-transform: uppercase;
 	z-index: 11;
 	color: $color-white;
 	font-weight: 400;
+
+	@include md-min {
+		font-size: 40px;
+	}
 }
 
 .services-details {
