new images + some styling

--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -108,9 +108,14 @@
 
 .sub-list__columns {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	gap: 50px;
 	padding-bottom: 30px;
+
+	@include md-min {
+		flex-direction: row;
+	}
 }
 
 .fade-out {
