--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -10,6 +10,10 @@
 html {
 	scroll-behavior: smooth;
 	scroll-padding-top: 50px;
+
+	@include md-max {
+		scroll-padding-top: 0;
+	}
 }
 
 body {
@@ -19,7 +23,6 @@ body {
 	font-style: normal;
 	font-size: 16px;
 }
-
 
 html,
 body,
@@ -89,8 +92,6 @@ input {
 	border-radius: 0;
 	outline: none;
 }
-
-
 
 .list-item {
 	& + .list-item {
