--- a/src/styles/bigImage.scss
+++ b/src/styles/bigImage.scss
@@ -3,7 +3,7 @@
 	height: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 60vh;
+	height: 80vh;
 	background-image: url(../assets/images/header/header.jpg);
 	width: 100vw;
 	position: relative;
@@ -19,5 +19,10 @@
 		height: 100%;
 		background-color: black;
 		opacity: 0.4;
+	}
+
+	@include md-max {
+		background-size: contain;
+		height: 40vh;
 	}
 }
