--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -22,6 +22,8 @@ body {
 	font-weight: 400;
 	font-style: normal;
 	font-size: 16px;
+	color: $color-main;
+	overflow-x: hidden;
 }
 
 html,
@@ -97,10 +99,6 @@ input {
 	& + .list-item {
 		margin-top: 12px;
 	}
-
-	@include sm-max {
-		margin-left: 17px;
-	}
 }
 
 .list-subtitle {
@@ -119,7 +117,7 @@ input {
 }
 
 a {
-	color: black;
+	color: $color-main;
 	text-decoration: none;
 	cursor: pointer;
 }
