--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -10,6 +10,7 @@
 }
 
 .slider-partners {
+	margin: 50px 0;
 	@include md-min {
 		margin: 100px 0;
 	}
@@ -46,4 +47,8 @@
 	background-position: center;
 	max-height: 100px;
 	max-width: 150px;
+
+	@include sm-max {
+		height: 150px;
+	}
 }
