--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,51 +1,66 @@
 .header {
-    height: 100vh;
+	height: 100vh;
 }
 
 .header__inner {
-    overflow-x: clip;
+	overflow-x: clip;
 }
 
 .header__image {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    background-image: url(../assets/images/header/header.jpg);
-    width: 100vw;
-    position: relative;
-    top: 0;
-    background-position: center;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	background-image: url(../assets/images/header/header.jpg);
+	width: 100vw;
+	position: relative;
+	top: 0;
+	background-position: center;
 
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: black;
-        opacity: 0.4;
-    }
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: black;
+		opacity: 0.4;
+	}
 }
 
 .header__title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: $color-white;
-    text-transform: uppercase;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: $color-white;
+	text-transform: uppercase;
 }
 
 .header__text {
-    font-size: 40px;
-    text-align: center;
-    font-weight: 400;
+	font-size: 40px;
+	text-align: center;
+	font-weight: 400;
 
-    @include md-min {
-        font-size: 70px;
-    }
+	@include md-min {
+		font-size: 70px;
+	}
 }
 
+.header__text-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.header__button {
+	background: $color-red;
+	margin-top: 40px;
+	border: 1px solid $color-red;
+	padding: 15px 20px;
+	color: $color-white;
+	margin: 0 auto;
+	font-size: 12px;
+}
