--- a/src/styles/contact-widgets.scss
+++ b/src/styles/contact-widgets.scss
@@ -1,22 +1,45 @@
+@keyframes bounce {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-10px);
+	}
+}
+
 .contact-widget {
 	position: fixed;
-	right: 0;
-	bottom: 50%;
-	background-color: $color-red;
-	width: 50px;
-	height: 100px;
+	right: 20px;
+	top: 90%;
+	background-color: $color-white;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
 	display: flex;
 	justify-content: space-around;
 	flex-direction: column;
 	align-items: center;
+	transform: translateY(-50%);
+	animation: bounce 1s infinite;
+
+	@include md-min {
+		width: 50px;
+		height: 50px;
+	}
 
 	a {
-		color: $color-white;
+		color: $color-red;
 		display: block;
-		font-size: 30px;
+		font-size: 18px;
 		cursor: pointer;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+
+		@include md-min {
+			font-size: 25px;
+		}
 	}
 }
