--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -25,8 +25,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: black;
-		opacity: 0.4;
+		background-color: #353333;
+		opacity: 0.6;
 	}
 }
 
@@ -37,6 +37,15 @@
 	transform: translate(-50%, -50%);
 	color: $color-white;
 	text-transform: uppercase;
+
+	@include md-max {
+		width: 100%;
+	}
+
+	@include md-min {
+		width: 70%;
+		margin: 0 auto;
+	}
 }
 
 .header__text {
@@ -56,11 +65,65 @@
 }
 
 .header__button {
-	background: $color-red;
+	background: transparent;
 	margin-top: 40px;
-	border: 1px solid $color-red;
+	border: 1px solid lightgray;
 	padding: 15px 20px;
 	color: $color-white;
 	margin: 0 auto;
 	font-size: 12px;
+	font-weight: 600;
+}
+
+/* Styling for the header button */
+.header__button {
+	position: relative;
+	background: transparent;
+	margin-top: 40px;
+	border: 1px solid lightgray;
+	padding: 15px 20px;
+	color: white; /* Assuming $color-white is white, you can replace it with white */
+	margin: 0 auto;
+	font-size: 12px;
+	font-weight: 600;
+	text-decoration: none; /* Ensure no underline */
+	text-align: center;
+	display: inline-block;
+	transition: all 0.3s ease;
+}
+
+/* Add border animation (mimicking .btn.btn-border-3 animation) */
+.header__button::after,
+.header__button::before {
+	position: absolute;
+	content: '';
+	width: 0;
+	height: 0;
+	transition: 0.5s;
+}
+
+.header__button::after {
+	top: -9px;
+	left: -9px;
+	border-top: 2px solid transparent;
+	border-left: 2px solid transparent;
+}
+
+.header__button::before {
+	bottom: -9px;
+	right: -9px;
+	border-bottom: 2px solid transparent;
+	border-right: 2px solid transparent;
+}
+
+/* Hover effect */
+.header__button:hover {
+	color: $color-white; /* Changes text color */
+}
+
+.header__button:hover::after,
+.header__button:hover::before {
+	width: 30px; /* Controls the width of the border on hover */
+	height: 30px; /* Controls the height of the border on hover */
+	border-color: $color-white; /* Controls the color of the border */
 }
