--- a/src/styles/bigImage.scss
+++ b/src/styles/bigImage.scss
@@ -17,8 +17,9 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: black;
-		opacity: 0.4;
+
+		background-color: #353333;
+		opacity: 0.6;
 	}
 
 	@include md-max {
