--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -18,7 +18,6 @@ body {
 	font-style: normal;
 	font-size: 16px;
 	color: $color-main;
-
 }
 
 html,
@@ -126,9 +125,19 @@ li {
 	content: '✓';
 }
 
-
 .sub-list__col {
 	@include md-max {
 		font-size: 13px;
 	}
+}
+
+.quote {
+	padding: 20px 0;
+	font-weight: 450;
+	color: $color-red;
+	font-size: 22px;
+}
+
+#offerte {
+	scroll-margin-top: 100px; /* Zastępuje potrzebę przesunięcia w JS */
 }
