--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -52,9 +52,11 @@
 	font-size: 40px;
 	text-align: center;
 	font-weight: 400;
+	padding: 0 20px;
 
 	@include md-min {
 		font-size: 70px;
+		padding: 0;
 	}
 }
 
@@ -90,6 +92,10 @@
 	text-align: center;
 	display: inline-block;
 	transition: all 0.3s ease;
+
+	@include md-max {
+		padding: 10px 13px;
+	}
 }
 
 /* Add border animation (mimicking .btn.btn-border-3 animation) */
