--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -8,6 +8,12 @@
 	font-weight: 450;
 	text-transform: uppercase;
 
+	.section-welcome & {
+		@include md-max {
+			display: none;
+		}
+	}
+
 	@include md-min {
 		font-size: 22px;
 	}
