--- a/src/styles/link.scss
+++ b/src/styles/link.scss
@@ -35,11 +35,11 @@
 	position: relative;
 	font-weight: 500;
 
-	@include md-min {
-		font-size: 22px;
+	.count-up__section & {
+		font-size: 13px;
 
-		.count-up__section & {
-			font-size: 18px;
+		@include md-min {
+			font-size: 22px;
 		}
 	}
 }
@@ -49,6 +49,7 @@
 	display: inline-flex;
 	font-size: 15px;
 	color: $color-main;
+	margin-bottom: -3px;
 
 	@include md-max {
 		font-size: 13px;
