--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -19,6 +19,10 @@
 
 		.hamburger-react {
 			color: $color-main;
+
+			@include sm-max {
+				margin-right: -5px;
+			}
 		}
 	}
 }
@@ -197,7 +201,7 @@
 
 .menu__list-desktop {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	flex-wrap: nowrap;
 }
