--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -23,6 +23,11 @@
 		align-items: center;
 		margin-left: -4px;
 	}
+
+	@include md-min {
+		flex-direction: row;
+		gap: 20px;
+	}
 }
 
 input[type='radio'] {
@@ -32,4 +37,16 @@ input[type='radio'] {
 
 input[type='radio']:checked {
 	accent-color: $color-red;
+}
+
+label {
+	font-size: 20px;
+}
+
+.label-checkbox {
+	font-size: 16px;
+}
+
+.checkbox-container {
+	padding: 20px 0;
 }
