--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -44,8 +44,8 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: black;
-	opacity: 0.4;
+	background-color: #353333;
+	opacity: 0.6;
 	transition: opacity 0.3s ease;
 	pointer-events: none;
 }
@@ -82,6 +82,7 @@
 	width: 100%;
 	margin: 40px 0;
 	transition: transform 0.3s ease;
+	overflow: hidden;
 
 	@include md-min {
 		flex-direction: row;
@@ -146,7 +147,7 @@
 	height: 102%;
 	display: none;
 	opacity: 0;
-	transition: opacity 0.5s ease-in-out;
+	transition: opacity 0.6s ease;
 	z-index: 10;
 	border-right: 2px solid $color-red;
 	margin-top: -1px;
