--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -50,3 +50,9 @@ label {
 .checkbox-container {
 	padding: 20px 0;
 }
+
+.contact-offer-form {
+	border: 2px solid $color-red;
+	padding: 20px;
+	border-radius: 3%;
+}
