--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -54,12 +54,12 @@
 	width: 100%;
 	padding: 10px 0;
 	font-family: 'Montserrat', sans-serif;
-
+	font-size: 18px;
 	box-sizing: border-box;
 	border: none;
 
 	border-bottom: 1px solid $color-main;
-	color: #8b8b8b;
+	color: black;
 
 	&::placeholder {
 		opacity: 0.7;
